# mirrorball

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  LICENSE  PLAN.md  README.md  bridge.example.json  docker-compose.yml  pyproject.toml
mirrorball/: __main__.py  bridge.py
mirrorball/api/: playground.py  server.py
mirrorball/core/: clock.py  color.py  engine.py  patterns.py  presets.py  show.py  store.py
mirrorball/drivers/: base.py  dtls.py  stream.py
mmdj/: __main__.py  bridge.py
mmdj/api/: server.py
mmdj/core/: clock.py  engine.py  patterns.py  presets.py  show.py  store.py
mmdj/drivers/: base.py  dtls.py  stream.py
scripts/: demo_panel.py  deploy.sh  register_bridge.py  spike_stream.py  test-ui.sh
scripts/shots/: package-lock.json  package.json  playground.mjs  probe.mjs  shoot.mjs
scripts/shots/pgframes/: list.txt
tests/: test_patterns.py  test_playground.py  test_store.py
tests/ui/: groups.test.mjs  harness.mjs  help.test.mjs  package-lock.json  package.json  playground.test.mjs  presets.test.mjs  run.mjs  sliders.test.mjs  solo.test.mjs  tempo.test.mjs
web/: app.js  index.html  manifest.json
