[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmdj"
version = "0.1.0"
description = "A light sequencer for the house — patterns, tempo, shows"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7",
    "aiohttp>=3.14.1",
    "python-mbedtls>=2.10.1",
]

[project.optional-dependencies]
hue = ["aiohue>=4.7"]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "websockets>=13"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.9"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
